[package]
name = "actix-awc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
actix-http = "3.2.1"
actix-cors = "0.6.1"
awc = "3.0.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
futures = {version = "0.3.21", features=["std"]}
serde = {version = "1.0.140", features = ["derive"]}
serde_json = "1.0.82"